--- a/EcommercApi/appsettings.json
+++ b/EcommercApi/appsettings.json
@@ -13,6 +13,7 @@
   "Jwt": {
     "Issuer": "http://localhost:5257",
     "Audience": "http://localhost:5257",
+    //this key is generated only by me 
     "Key": "LKJLK23KHLJÉ3LKJLKJ23123LJLJ2KHH209LKJLKJ"
   },
   "AllowedHosts": "*"
