--- a/EcommercApi/appsettings.json
+++ b/EcommercApi/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:{Your server name },1433;Initial Catalog={your database name};Persist Security Info=False;User ID={your user id };Password={Your Password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:ecommerceserveur.database.windows.net,1433;Initial Catalog=ecommercedb;Persist Security Info=False;User ID=issamhelicommerceserveur;Password=Dimadchierahtalmoot1.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "Jwt": {
